# fast-api-learn-base

./: .gitignore
micro_shop/: alembic.ini  crud.py  db.sqlite3  item_views.py  main.py  pyproject.toml  queries.sql  requirements.txt
micro_shop/alembic/: env.py
micro_shop/alembic/versions/: 2024_11_10_1507-04dba4545e2d_create_accounts_table.py  2024_11_10_1523-71dbae754b28_create_products_table.py  2024_11_10_1541-f7ca050be76b_create_users_table.py  2024_11_10_1544-9e910360667e_rename_column_in_users_table.py  2024_11_10_1557-89c1fd05fdce_del_table.py  2024_11_10_1559-c820aef561cd_add_table_users.py  2024_11_10_1613-47a7da21a178_add_table_posts.py  2024_11_12_0738-366d90f878c9_new_migration.py  2024_11_12_0819-25f59473490c_create_profile_table.py  2024_11_12_0822-16c0aae51897_create_profile_table_1.py  2024_11_13_0851-d2f0cfb59a63_aaa.py  2024_11_20_2144-b64a8b58064d_create_table_orders.py  2024_11_21_1802-cca1a1171c94_create_table_order_product_association.py  2024_11_24_1744-6b0e6bfbd919_querty.py  2024_11_24_1750-96f200c5ce0b_add_count_column_to_association_table.py  2024_11_26_2028-7c111a4e0245_add_column_unit_price.py
micro_shop/api_v1/: __init__.py
micro_shop/api_v1/products/: crud.py  dependencies.py  views.py
micro_shop/auth/: README.md  utils.py
micro_shop/core/: config.py
micro_shop/core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
micro_shop/demo_auth/: demo_jwt_auth.py  helpers.py  validations.py  views.py
micro_shop/users/: crud.py  schemas.py  views.py
(+10 files in other folders)
